--- a/_footer.html
+++ b/_footer.html
@@ -3,6 +3,7 @@
       <footer>
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></div>
         <div>Email: <a href="mailto:said.garcia12@gmail.com">said.garcia12@gmail.com</a></div>
+        <div>Source: <a href="https://github.com/saidg23/blog">https://github.com/saidg23/blog</a></div>
       </footer>
     </div>
   </body>
