added xmpp link

--- a/_footer.html
+++ b/_footer.html
@@ -3,6 +3,7 @@
       <footer>
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></div>
         <div>Email: <a href="mailto:said.garcia12@gmail.com">said.garcia12@gmail.com</a></div>
+        <div>XMPP: <a href="xmpp:said@saidgarcia.com?omemo-sid-1384502847=3cde6f97e02d6fac9e611f87ac84c2ec0ef995abc660b56fddb98b30148b8c28">said@saidgarcia.com</a></div>
         <div>Source: <a href="https://github.com/saidg23/blog">https://github.com/saidg23/blog</a></div>
       </footer>
     </div>
